testdata/baselines/reference/submodule/conformance/jsdocTypeFromChainedAssignment2.errors.txt
mod.js(2,21): error TS2339: Property 'g' does not exist on type 'typeof import("mod")'.
mod.js(2,37): error TS7006: Parameter 'n' implicitly has an 'any' type.
mod.js(6,35): error TS2339: Property 'i' does not exist on type 'typeof import("mod")'.
mod.js(6,51): error TS7006: Parameter 'mom' implicitly has an 'any' type.
use.js(3,5): error TS2339: Property 'g' does not exist on type 'typeof import("mod")'.
use.js(5,5): error TS2339: Property 'i' does not exist on type 'typeof import("mod")'.


==== use.js (2 errors) ====
    var mod = require('./mod');
    mod.f('no')
    mod.g('also no')
        ~
!!! error TS2339: Property 'g' does not exist on type 'typeof import("mod")'.
    mod.h(0)
    mod.i(1)
        ~
!!! error TS2339: Property 'i' does not exist on type 'typeof import("mod")'.
    
==== mod.js (4 errors) ====
    /** @param {number} n */
    exports.f = exports.g = function fg(n) {
                        ~
!!! error TS2339: Property 'g' does not exist on type 'typeof import("mod")'.
                                        ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
        return n + 1
    }
    /** @param {string} mom */
    module.exports.h = module.exports.i = function hi(mom) {
                                      ~
!!! error TS2339: Property 'i' does not exist on type 'typeof import("mod")'.
                                                      ~~~
!!! error TS7006: Parameter 'mom' implicitly has an 'any' type.
        return `hi, ${mom}!`;
    }
    